Fix for bug #10001: a timeout event prevents further reads. The Bug DB has a patch that should be applied to fsock.c on the 4.2 branch.